--- a/paginas/css11galeilustraciones/estilos11.css
+++ b/paginas/css11galeilustraciones/estilos11.css
@@ -5,10 +5,10 @@
 }
 
 body{
-
+  padding: 10px;
   max-width: 100%;
   margin-left: 0;
-  background-color:#89d9e4;
+  background-color:black;
   font-family:Espera-Bold;
 }
 
@@ -65,6 +65,7 @@ ul, ol{
 
 
 .header{
+  font-family:Espera-Bold;
   box-shadow: inset 0 0 20px rgba(0, 247, 255, 0.801), 0 0;
   z-index: 999;
 	padding: 2rem;
@@ -75,6 +76,7 @@ ul, ol{
 	width: 100%;
 }
 .header a{
+  font-family:Espera-Bold;
 	color: aliceblue;
 	text-decoration: none;
 }
@@ -120,12 +122,6 @@ img{
 	width: 50%;
 }
 
-h2{
-    font-size: 100px;
-    margin-top: 200px;
-    text-align: center;     
-}
-
 
 
 
@@ -137,186 +133,114 @@ h2{
 /*ilustraciones*/
 
 
-.titulo{
-  background-color:black;
+.subtitulo1{
+  font-family:Espera-Bold;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 130px;
-  height: 250;
-}
-
-.titulo1{
-  color: white;
-  font-size: 30px;
-  margin-top: 5px;
-  text-align: center;
-}
-
-.subtitulo1{
-  margin-top: 900px;
-  color: white;
-  font-size: 30px;
-  margin-top: 5px;
-  text-align: center;
+  margin-top: 12%;
+  height: 25px;
+  background-color: black;
 }
 .titulo11{
+  font-family:Espera-Bold;
   margin-top: 900px;
-  color: black;
-  font-size: 30px;
-  margin-top: 5px;
-  text-align: center;
-}
-
-
-
-
-
-.imagenesjjj{
   color: white;
   font-size: 30px;
   margin-top: 5px;
   text-align: center;
 }
-
 
 .imagenesjj{
   margin-top: 20px;
-  background-color: white;
-  height: 400px;
+  background-color: black;
+  height: 500px;
 }
 
 
 
-.row > .column {
-  padding: 0 8px;
-}
 
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
+.botones{
+  margin-top: 15%;
+  margin-left: 25%;
 
-/* Create four equal columns that floats next to eachother */
-.column {
+  border-radius: 20px;
+  padding: 40px;
+  position: absolute;
   display: flex;
-  justify-content:center;
-
-  margin-top: 10px;
-  width: 25%;
+}
+button{
+  border-radius: 10px;
+  background-color: blueviolet;
 }
 
-/* The Modal (background) */
-.modal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  padding-top: 100px;
-  left: 0px;
- 
-  top: 100px;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgb(0, 0, 0);
-}
-
-/* Modal Content */
-.modal-content {
-  position: relative;
-  background-color: black;
-  margin: auto;
-  padding: 0;
-  width: 100%;
-  max-width: 1200px;
-}
-
-/* The Close Button */
-.close {
-  color: white;
+.caja{
+  height: 450px;
   position: absolute;
-  top: 10px;
-  right: 25px;
-  font-size: 50px;
-  font-weight: bold;
+
+  display: flex;
+  justify-content: center;
+  overflow: hidden;
 }
 
-.close:hover,
-.close:focus {
-  color: white;
-  text-decoration: none;
-  cursor: pointer;
-}
 
-/* Hide the slides by default */
-.mySlides {
-  background-color: black;
-  margin-left: 300px;
-  width: 100%;
-  display: none;
-}
-
-/* Next & previous buttons */
-.prev,
-.next {
-  cursor: pointer;
+.hover{
   position: absolute;
-  top: 5%;
-  width: auto;
-  padding: 10px;
-  margin-top: -50px;
-  color: #43ebc6;
-  font-weight: bold;
-  font-size: 50px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-  -webkit-user-select: none;
+  overflow: hidden;
+}
+.hover h1{
+  font-family:Espera-Bold;
+  font-size:15px;
+  overflow: hidden;
 }
 
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover,
-.next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: black;
-  font-size: 30px;
-  padding: 8px 12px;
+.caja .hover{
   position: absolute;
-  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
 }
 
-/* Caption text */
-.caption-container {
-  text-align: center;
-  background-color:#43089E;
-  padding: 2px 16px;
+.hover h1:hover{
+  font-family:Espera-Bold;
   color: white;
+  text-shadow: 2px 2px 2px #7F3BEB;
+  font-size: 2.5em;
+  text-transform: uppercase;
+  overflow: hidden; 
 }
 
-img.demo {
-  opacity: 0.6;
+.subtitulos{
+  font-family:Espera-Bold;
+  color: #fff;
+  font-size: 20px;
+  overflow: hidden;
 }
 
-.active,
-.demo:hover {
-  opacity: 1;
+::-webkit-scrollbar{
+  width: 0px;
+  height:60px;
+  background-color:black ;
+}
+::-webkit-scrollbar-track-piece{
+  height: 10px;
+  background-color:white;
+
+}
+::-webkit-scrollbar:hover{
+  background-color: white;
 }
 
-img.hover-shadow {
-  transition: 0.3s;
-}
 
-.hover-shadow:hover {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
+
+
+
+
+
+
+
+
+
+
+
