--- a/paginas/css14galevideos/estilos14.css
+++ b/paginas/css14galevideos/estilos14.css
@@ -199,3 +199,18 @@ h2{
   text-align: center;
   font-size: 20px;
 }
+
+
+::-webkit-scrollbar{
+  width: 0px;
+  height:60px;
+  background-color:black ;
+}
+::-webkit-scrollbar-track-piece{
+  height: 10px;
+  background-color:white;
+
+}
+::-webkit-scrollbar:hover{
+  background-color: white;
+}
