--- a/paginas/css2/estilos2 .css
+++ b/paginas/css2/estilos2 .css
@@ -8,7 +8,7 @@ body{
   padding: 10px;
   display: flex;
   max-width: 100%;
-  background-color: #43ebc6;
+  background-color:black;
   font-family:Espera-Bold;
 }
 
@@ -128,15 +128,17 @@ h2{
 /*aqui empiezan las barras de progreso*/
 
 
-
+.principalhabilidades{
+  height: 1000px;
+  background-color: crimson;
+}
 .barras1{
-
+  margin-top: 1100px;
+  position: absolute;
   color: #fff;
   height: 950px;
   border-radius: 20px;
   background-color:black;
-  margin-left: px;
-  margin-top: 125px;
   margin-right: 1px;
 }
 
@@ -152,10 +154,11 @@ h2{
   text-align: center;
 }
 .barras2{
-
+  margin-left: 50%;
+  margin-top: 1100px;
+  position: absolute;
   align-items: center;
   border-radius: 20px;
-  margin-top: 125px;
   background-color:black;
   margin-right: 6px;
 }
@@ -210,3 +213,4 @@ h2{
   border-radius: 3px;
   background-color: #7123eb;
 }
+
