--- a/paginas/css6servicios/estilos6.css
+++ b/paginas/css6servicios/estilos6.css
@@ -7,7 +7,7 @@
 body{
   max-width: 100%;
   margin-left: 0;
-  background-color:#43ebc6;
+  background-color:#000000;
   font-family:Espera-Bold;
 }
 
@@ -134,7 +134,7 @@ h2{
 
 
 .titulo{
-  background-color:white;
+
   display: flex;
   justify-content: center;
   align-items: center;
@@ -143,7 +143,7 @@ h2{
 }
 
 .titulo1{
-  color: black;
+  color: #fff;
   font-size: 30px;
   margin-top: 5px;
   text-align: center;
@@ -165,11 +165,12 @@ h2{
   }
 }
   #slider {
+    border-radius: 5%;
     text-align: center;
     margin: 5px auto;
-    box-shadow: inset 0 0 20px rgba(0, 247, 255, 0.801), 0 0;
-    background-color: #43ebc6;
-    height: 420px;
+    box-shadow: inset 0 0 20px rgba(0 , 0, 0, 1.801), 0 0;
+    background-color: #fff;
+    height: 400px;
   }
 @media only screen and (-webkit-min-device-pixel-ratio: 1){
   * { 
@@ -261,7 +262,7 @@ h2{
   #slide5:checked ~ #controls label:nth-child(4) {
     background: url('https://assets.bounceexchange.com/assets/uploads/users/741/fJyenwIJ.png') no-repeat;
     float: left;
-    margin: 0 0 0 -70px;
+    margin: 0 0 32px -80px;
     display: block;
   }
   #slide1:checked ~ #active label:nth-child(1),
